--- a/profiling-viewer/app/views/index.scala.html
+++ b/profiling-viewer/app/views/index.scala.html
@@ -14,7 +14,7 @@
    @for(run <- runs.take(10)) {
    <div class="row">
      <div class="span12">
-         <p>@run.rev.sha1.take(7) -- @run.rev.description</p>
+         <p><a href="@routes.SingleCompilerRev.rev(run.rev.sha1)">@run.rev.sha1.take(7)</a> -- @run.rev.description</p>
      </div>
  </div>
 }
