--- a/profiling-viewer/app/views/main.scala.html
+++ b/profiling-viewer/app/views/main.scala.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")" />
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")" />
         <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/highcharts/highcharts.js")" type="text/javascript"></script>
     </head>
     <body>
        <div class="container">
