--- a/profiling-viewer/app/views/index.scala.html
+++ b/profiling-viewer/app/views/index.scala.html
@@ -32,11 +32,20 @@ scalapAvgs.size = @scalapAvgs.size
 <script type="text/javascript">
 var sha1s = @Html(Json.toJson(allBenchmarks.map(_.rev.sha1)).toString)
 var sha1Links = @Html(Json.toJson(allBenchmarks.map(compilerRevBenchmarks => routes.SingleCompilerRev.rev(compilerRevBenchmarks.rev.sha1).toString)).toString)
+var sha1Messages = @Html(Json.toJson(allBenchmarks.map(_.rev.commit.getShortMessage)).toString)
+var sha1Timestamps = @Html(Json.toJson(allBenchmarks.map(_.rev.commit.getCommitTime.toLong*1000)).toString)
+function shortenMessage(msg, length) {
+  if (msg.length > length) {
+    return msg.substring(0, length-3) + '...';
+  } else {
+    return msg;
+  }
+}
 $(document).ready(function() {
   var chart = new Highcharts.Chart({
     chart: {
       renderTo: 'charts-container',
-      type: 'line',
+      type: 'area',
       zoomType: 'x'
     },
     title: {
@@ -47,22 +56,55 @@ $(document).ready(function() {
         formatter: function() {
           var index = this.value;
           var sha1 = sha1s[this.value];
+          var timestamp = sha1Timestamps[index];
           if (typeof(sha1) === "undefined")
             return null;
           else
-            return '<a href="' + sha1Links[index] + '">' + sha1.substring(0, 7) + '</a>';
+            return '<a href="' + sha1Links[index] + '">' + sha1.substring(0, 7) +
+              '<br/>' + Highcharts.dateFormat('%b %d', timestamp) + '</a>';
         }
       }
+    },
+    yAxis: {
+      title: {
+        text: 'Average running time'
+      },
+      min: 3000
     },
 
     plotOptions: {
       series: {
-      cursor: 'pointer',
+        cursor: 'pointer',
         point: {
           events: {
             click: function() {
               document.location.href=sha1Links[this.category]
             }
+          }
+        },
+      },
+      area: {
+        fillColor: {
+          linearGradient: [0, 0, 0, 300],
+          stops: [
+            [0, Highcharts.getOptions().colors[0]],
+            [1, 'rgba(2,0,0,0)']
+          ]
+        },
+        lineWidth: 1,
+        marker: {
+          enabled: false,
+          states: {
+            hover: {
+              enabled: true,
+              radius: 5
+            }
+          }
+        },
+        shadow: false,
+        states: {
+          hover: {
+            lineWidth: 1
           }
         }
       }
@@ -70,8 +112,9 @@ $(document).ready(function() {
 
     tooltip: {
       formatter: function() {
-        return '<b>' + sha1s[this.x].substring(0,7) + '</b><br/>' +
-        this.y + 'ms';
+        return sha1s[this.x].substring(0,7) + ' <b>' + shortenMessage(sha1Messages[this.x], 60) + '</b><br/>' +
+        Highcharts.dateFormat('%d %b %Y', sha1Timestamps[this.x]) + '<br/>' +
+        Highcharts.numberFormat(this.y, 2, '.', ' ') + ' ms';
       }
     },
 
