--- a/profiling-viewer/app/views/rev.scala.html
+++ b/profiling-viewer/app/views/rev.scala.html
@@ -8,6 +8,13 @@
     </div>
     <div class="row">
       <div class="span6">
+        <div class="well">
+          @for(messageLine <- compilerRevBenchmarks.rev.commit.getFullMessage.lines) {
+            @messageLine <br/>
+          }
+        </div>
+      </div>
+      <div class="span3">
         <h4>Parents</h4>
         <ul class="unstyled">
           @for(parentRev <- compilerRevBenchmarks.rev.commit.getParents.map(_.getName)) {
@@ -18,7 +25,7 @@
           }
         </ul>
       </div>
-      <div class="span6">
+      <div class="span3">
         <h4>Children <small>(reachable from master)</small></h4>
         <ul class="unstyled">
           @for(childRev <- revChildren.map(_.sha1)) {
