--- a/profiling-viewer/app/views/rev.scala.html
+++ b/profiling-viewer/app/views/rev.scala.html
@@ -28,7 +28,7 @@
         </ul>
       </div>
       <div class="span3">
-        <h4>Children <small>(reachable from master)</small></h4>
+        <h4>Children <small>(reachable from 2.10.x)</small></h4>
         <ul class="unstyled">
           @for(childRev <- revChildren.map(_.sha1)) {
             <li>
